--- a/tests/testcases/regfile_and_arrays.rdl
+++ b/tests/testcases/regfile_and_arrays.rdl
@@ -19,6 +19,7 @@ addrmap regfile_and_arrays {
                 default hw = r;
                 field {} basicfield_a[31:0];
             };
+            basic_reg_Type basic_reg_a_2d[2][2];
             basic_reg_Type basic_reg_a[2];
             basic_reg_Type2 basic_reg_b;
         } layer2_regfile_a[2];
