--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -184,7 +184,11 @@ class {{get_fully_qualified_type_name(node)}}_cls({% if asyncoutput %}Async{% en
             }
 
     {{ child_register_getter(node) }}
-    {{ child_getter(node, "get_sections",  "{% if asyncoutput %}Async{% endif %}RegFile", systemrdlRegfileNode) }}
+        {% if asyncoutput %}
+    {{ child_getter(node, "get_sections", "AsyncRegFile, AsyncRegFileArray", systemrdlRegfileNode) }}
+    {% else %}
+    {{ child_getter(node, "get_sections", "RegFile, RegFileArray", systemrdlRegfileNode) }}
+    {% endif %}
 
      {%- if node.is_array %}
 class {{get_fully_qualified_type_name(node)}}_array_cls({% if asyncoutput %}Async{% endif %}RegFileArray):
