--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -19,9 +19,10 @@ import warnings
 from contextlib import {% if asyncoutput %}async{% endif %}contextmanager
 
 from ..lib import Node
-from ..lib import Memory
+
 from ..lib  import AddressMapArray, RegFileArray
 {% if asyncoutput -%}
+from ..lib import AsyncMemory, AsyncMemoryArray
 from ..lib import AsyncAddressMap
 from ..lib import AsyncRegFile
 from ..lib  import AsyncAddressMapArray
@@ -37,6 +38,7 @@ from ..lib import FieldAsyncReadOnly, FieldAsyncWriteOnly, FieldAsyncReadWrite, 
 from ..lib import ReadableAsyncRegister, WritableAsyncRegister
 from ..lib import ReadableAsyncRegisterArray, WriteableAsyncRegisterArray
 {%- else -%}
+from ..lib import Memory, MemoryArray
 from ..lib import AddressMap
 from ..lib import RegFile
 from ..lib  import AddressMapArray
@@ -292,11 +294,12 @@ class {{get_fully_qualified_type_name(node)}}_cls({% if asyncoutput %}Async{% en
             }
 
     {{ child_register_getter(node) }}
-    {{ child_getter(node, "get_memories",    "Memory",     systemrdlMemNode) }}
     {% if asyncoutput %}
     {{ child_getter(node, "get_sections", "AsyncAddressMap, AsyncRegFile, AsyncAddressMapArray, AsyncRegFileArray", (systemrdlAddrmapNode, systemrdlRegfileNode)) }}
+    {{ child_getter(node, "get_memories",    "Memory, MemoryArray",     systemrdlMemNode) }}
     {% else %}
     {{ child_getter(node, "get_sections", "AddressMap, RegFile, AddressMapArray, RegFileArray", (systemrdlAddrmapNode, systemrdlRegfileNode)) }}
+    {{ child_getter(node, "get_memories",    "AsyncMemory, AsyncMemoryArray",     systemrdlMemNode) }}
     {% endif %}
 
     {%- if node.is_array %}
