--- a/src/peakrdl_python/templates/addrmap_memory.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_memory.py.jinja
@@ -23,7 +23,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(Memory{% if asyncoutput %}Asyn
                  address: int,
                  logger_handle: str,
                  inst_name: str,
-                 parent:AddressMap):
+                 parent:{% if asyncoutput %}Async{% endif %}AddressMap):
 
         super().__init__(address=address,
                          entries={{node.get_property('mementries')}},
