--- a/src/peakrdl_python/templates/addrmap_memory.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_memory.py.jinja
@@ -89,7 +89,7 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(Memory{% if asyncoutput 
     __slots__: List[str] = []
 
     def __init__(self, logger_handle: str, inst_name: str,
-                 parent: AddressMap,
+                 parent: {% if asyncoutput %}Async{% endif %}AddressMap,
                  address: int,
                  stride: int,
                  dimensions: Tuple[int, ...]):
